# ChuMaiNichi

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  components.json  config.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
.factory/: init.sh  services.yaml
.factory/missions/3b66631a-daf3-4c30-88ef-d8e30045801d/: validation-state.json
.factory/skills/backend-worker/: SKILL.md
.github/workflows/: refresh-songs.yml  scrape-daily.yml  scrape-user-data.yml
api/: chat.ts  cover.ts  query.ts  rating-image.ts  refresh.test.ts  refresh.ts
public/: maimai-songs.json
scraper/: .env.example  import_user_data.py  init.sql  main.py  pyproject.toml
scraper/play_counter/: config.py  daily_play_notifier.py  db.py  scraper.py
scraper/play_counter/reports/: monthly.py  weekly.py
scraper/play_counter/utils/: constants.py  date_helpers.py
scraper/tests/: test_import_user_data.py
scripts/: scrape-chunithm.sh  scrape-maimai.sh
src/: App.tsx  index.css
src/api/: auth.ts  config.ts  error-handling.ts  query.ts
src/api/chat/: client.ts  errors.ts  songs-cache.ts  system-prompt.ts  tools.ts
src/api/query/: errors.ts
src/components/: Heatmap.tsx  PasswordGate.tsx
src/features/heatmap/lib/: fetch.ts  (+4 more)
src/global/lib/: api.ts  auth.ts  config.ts  error-handling.ts  games.ts  maimai-rating.test.ts  maimai-rating.ts  maimai-suggest.ts
src/lib/: api.ts  auth.ts  config.ts  maimai-rating.test.ts  maimai-suggest.test.ts  maimai-suggest.ts  rating.test.ts  suggest-songs.test.ts  suggest-songs.ts
(+47 files in other folders)
